alioth: overlay: Allow to be rotated in all 4 rotations.
Change-Id: Ic38c944c7a299af9a3068b54e910029c76ce84c8
Signed-off-by: GhostMaster69-dev <rathore6375@gmail.com>
Signed-off-by: AbrarNoob <hasinabrarhaque@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -569,4 +569,8 @@
 
     <!-- Indicates whether StatusBar burn-in protection is On -->
     <bool name="config_statusBarBurnInProtection">true</bool>
+
+    <!-- If true, the screen can be rotated via the accelerometer in all 4
+    rotations as the default behavior. -->
+    <bool name="config_allowAllRotations">true</bool>
 </resources>
