--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -566,4 +566,7 @@
         <!-- Settings -->
         <item>com.android.settings</item>
     </string-array>        
+
+    <!-- Indicates whether StatusBar burn-in protection is On -->
+    <bool name="config_statusBarBurnInProtection">true</bool>
 </resources>
