--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -573,4 +573,9 @@
     <!-- If true, the screen can be rotated via the accelerometer in all 4
     rotations as the default behavior. -->
     <bool name="config_allowAllRotations">true</bool>
+
+    <!-- Amount of time in ms the user needs to press the relevant keys to trigger the
+         screenshot chord -->
+    <integer name="config_screenshotChordKeyTimeout">0</integer>  
+
 </resources>
