alioth: overlay: Sync Navigation Bar Dimens from TPB3.220513.017.B1
- Android 13 Beta 3.1 Introduced All New Wide Navigation Pill ( Preview: https://i.imgur.com/a0ZLvno.jpg )
  The dimens are synced from reverse engineered SystemUI of Android 13 Beta 3.1.

Signed-off-by: OmarAlCoptan <omarcoptan9@gmail.com>
Signed-off-by: AbrarNoob <hasinabrarhaque@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -42,4 +42,9 @@
     default that should be overridden by device-specific overlays. -->
     <dimen name="physical_power_button_center_screen_location_y">@dimen/physical_fingerprint_sensor_center_screen_location_y</dimen>
 
+    <!-- dimensions for the navigation bar handle -->
+    <dimen name="navigation_handle_radius">2dp</dimen>
+    <dimen name="navigation_handle_bottom">8dp</dimen>
+    <dimen name="navigation_home_handle_width">108dp</dimen>
+
 </resources>
